# yeti-set-go

./: .gitignore  Cargo.toml  README.md  asset_generator.py  dist-workspace.toml  download_heroicons.py  make_transparent.py  requirements.txt
.github/workflows/: release.yml
src/: api.rs  assets.rs  colors.rs  config.rs  design.rs  dev_mode.rs  highscores.rs  main.rs
src/entities/: item.rs  mod.rs  yeti.rs
src/game/: mod.rs  physics.rs  scoring.rs  spawning.rs  state.rs
src/ui/: hud.rs  leaderboard.rs  level_complete.rs  menu.rs  mod.rs  name_input.rs  renderer.rs
